Added reviews controller. Finalized restaurant views

--- a/app/views/restaurants/create.html.erb
+++ b/app/views/restaurants/create.html.erb
@@ -1,2 +1,10 @@
-<h1>Restaurants#create</h1>
-<p>Find me in app/views/restaurants/create.html.erb</p>
+<form action="/restaurants" method="post">
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+  <label for="name">Name: </label>
+  <input type="text" name="restaurant[name]" id="name">
+
+  <label for="address">Address: </label>
+  <input type="text" name="restaurant[address]" id="address">
+
+  <input type="submit">
+</form>
