--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Restaurants#index</h1>
-<p>Find me in app/views/restaurants/index.html.erb</p>
+<!-- app/views/restaurants/index.html.erb -->
+<h1>All the restaurants</h1>
+<%= link_to "Add a new restaurant", new_restaurant_path %>
+<% @restaurants.each do |restaurant| %>
+  <h2><%= link_to restaurant.name, restaurant_path(restaurant)   %></h2>
+  <p><%= restaurant.address %></p>
+<% end %>
+
