--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,2 +1,40 @@
-<h1>Restaurants#show</h1>
-<p>Find me in app/views/restaurants/show.html.erb</p>
+
+<p>
+  <strong>Name:</strong>
+  <%= @restaurant.name %>
+</p>
+ 
+<p>
+  <strong>Address:</strong>
+  <%= @restaurant.address %>
+</p>
+
+<h2>Reviews</h2>
+<% @restaurant.reviews.each do |review| %>
+  <p>
+    <strong>Rating:</strong>
+    <%= review.rating %>
+  </p>
+ 
+  <p>
+    <strong>Comment:</strong>
+    <%= review.content %>
+  </p>
+<% end %>
+ 
+<h2>Add a review:</h2>
+<%= form_with(model: [ @restaurant, @restaurant.reviews.build ], local: true) do |form| %>
+  <p>
+    <%= form.label :rating %><br>
+    <%= form.text_field :rating %>
+  </p>
+  <p>
+    <%= form.label :content %><br>
+    <%= form.text_area :content %>
+  </p>
+  <p>
+    <%= form.submit %>
+  </p>
+<% end %>
+ 
+<%= link_to 'Back', restaurants_path %>
