--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,40 +1,31 @@
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+        <p>
+        <strong>Name:</strong>
+        <%= @restaurant.name %>
+        </p>
+        
+        <p>
+        <strong>Address:</strong>
+        <%= @restaurant.address %>
+        </p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @restaurant.name %>
-</p>
- 
-<p>
-  <strong>Address:</strong>
-  <%= @restaurant.address %>
-</p>
+        <strong>Phone number:</strong>
+        <%= @restaurant.phone_number %>
+        </p>
 
-<h2>Reviews</h2>
-<% @restaurant.reviews.each do |review| %>
-  <p>
-    <strong>Rating:</strong>
-    <%= review.rating %>
-  </p>
- 
-  <p>
-    <strong>Comment:</strong>
-    <%= review.content %>
-  </p>
-<% end %>
- 
-<h2>Add a review:</h2>
-<%= form_with(model: [ @restaurant, @restaurant.reviews.build ], local: true) do |form| %>
-  <p>
-    <%= form.label :rating %><br>
-    <%= form.text_field :rating %>
-  </p>
-  <p>
-    <%= form.label :content %><br>
-    <%= form.text_area :content %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
- 
-<%= link_to 'Back', restaurants_path, class: "btn btn-primary"%>
+         <strong>Cuisine:</strong>
+        <%= @restaurant.category %>
+        </p>
+
+        <h2>Reviews</h2>
+            <%= render @restaurant.reviews %>
+        
+        <h2>Add a review:</h2>
+            <%= render 'reviews/form' %>
+        
+        <%= link_to 'Back', restaurants_path, class: "btn btn-primary"%>
+    </div>
+  </div>
+</div>
